--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -8,16 +8,19 @@
             <!-- Start Page Content -->
             <app-breadcrums></app-breadcrums>
 
+            <!-- Mi sistema de rutas-->
+            <router-outlet></router-outlet>
+
             <!-- Start Page Content -->
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-                            <router-outlet></router-outlet>
+
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <!-- footer -->
