--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
                 <li class="nav-devider"></li>
                 <li class="nav-small-cap">PERSONAL</li>
                 <li *ngFor="let item of menuItems">
-                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
+                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="true">
                         <i class="mdi mdi-gauge"></i>
                         <span class="hide-menu">{{item.titulo}}
                             <span class="label label-rouded label-themecolor pull-right">
