--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -16,7 +16,6 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-
                         </div>
                     </div>
                 </div>
@@ -31,3 +30,5 @@
     </div>
 
 </div>
+
+<app-modal-imagen></app-modal-imagen>
