--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -18,7 +18,7 @@
                         <label for="exampleInputEmail1">Email address</label>
                         <div class="input-group">
                             <div class="input-group-addon"><i class="ti-email"></i></div>
-                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email" formControlName="email" disabled="false" [readOnly]="usuario.google">
+                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email" formControlName="email" [readOnly]="true">
                         </div>
                     </div>
                     <br>
