--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,52 @@
 }
 
 .img-avatar {
-    width: 150px;
-    height: 200px;
+    width: 300px;
+    height: 400px;
+}
+
+.w100 {
+    width: 100px;
+}
+
+.w250 {
+    width: 250px;
+}
+
+.w50 {
+    width: 50px;
+}
+
+.w40 {
+    width: 50px;
+}
+
+.avatar-w40 {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.avatar-w50 {
+    width: 50px;
+    height: 50px;
+    border-radius: 75%;
+}
+
+.img-cell-table {
+    padding: 5px;
+}
+
+.fondo-modal-imagen {
+    background-color: rgba(0, 0, 123, 0.4);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+}
+
+.oculto {
+    display: none;
 }
