--- a/src/app/pages/mantenimientos/usuarios/usuarios.component.html
+++ b/src/app/pages/mantenimientos/usuarios/usuarios.component.html
@@ -58,14 +58,18 @@
                                 <td><small>{{ usuario.email }}</small></td>
                                 <td><small>{{ usuario.nombre }}</small></td>
                                 <td class="text-center"><small>{{usuario.fechaCreacion | date}}</small></td>
-                                <td><small>{{ usuario.estado }}</small></td>
+                                <td class="text-center">
+                                    <span *ngIf="usuario.estado === 'CREADO'" class="label label-warning">{{ usuario.estado }}</span>
+                                    <span *ngIf="usuario.estado === 'ACTIVO'" class="label label-primary">{{ usuario.estado }}</span>
+                                    <span *ngIf="usuario.estado === 'INACTIVO'" class="label label-danger">{{ usuario.estado }}</span>
+                                </td>
                                 <td class="text-center">
                                     <span *ngIf="usuario.role === 'ADMIN_ROLE'" class="label label-success">{{usuario.role}}</span>
                                     <span *ngIf="usuario.role === 'USER_ROLE'" class="label label-info">{{usuario.role}}</span>
                                 </td>
                                 <td class="text-nowrap text-center">
-                                    <a href="#" data-toggle="tooltip" data-original-title="Editar"> 
-                                        <i class="fa fa-pencil text-inverse m-r-10"></i> 
+                                    <a [routerLink]="['/dashboard/actualizarUsuario', usuario.uid]" title="Actualizar Datos de Usuario" data-toggle="tooltip" data-original-title="Actualizar Datos de Usuario">
+                                        <i class="fa fa-pencil text-inverse m-r-10"></i>
                                     </a>
                                     &nbsp;
                                     <a class="cursor" data-toggle="tooltip" data-original-title="Eliminar" (click)="eliminarUsuario(usuario)">
