Nuevo modulo de modificacion de retiro y cargue de archivo relacionado

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -7,7 +7,7 @@
                 <form class="form p-t-20" [formGroup]="profileForm" (submit)="actualizarProfile()">
 
                     <div class="form-group">
-                        <label for="exampleInputuname">Names and Surnames</label>
+                        <label for="exampleInputuname">Nombres y Apellidos</label>
                         <div class="input-group">
                             <div class="input-group-addon"><i class="ti-user"></i></div>
                             <input type="text" class="form-control" id="exampleInputuname" placeholder="Nombre y Apellido" formControlName="nombre">
@@ -15,7 +15,7 @@
                     </div>
                     <br>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
+                        <label for="exampleInputEmail1">Correo Electrónico</label>
                         <div class="input-group">
                             <div class="input-group-addon"><i class="ti-email"></i></div>
                             <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email" formControlName="email" [readOnly]="true">
