--- a/src/app/pages/retiros/retiros.component.html
+++ b/src/app/pages/retiros/retiros.component.html
@@ -33,9 +33,10 @@
                                 <th>Id de transacción</th>
                                 <th>Modelo asociada al retiro</th>
                                 <th class="text-center">Estado</th>
-                                <th class="text-center">Entrevista</th>
-                                <th class="text-center">Fecha de Renuncia</th>
+                                <th class="text-center">PDF</th>
+                                <th class="text-center">Fecha de renuncia</th>
                                 <th class="text-center">Usuario que registra</th>
+                                <th class="text-center">Fecha de registro</th>
                                 <th class="text-center">Acción</th>
                             </tr>
                         </thead>
@@ -45,15 +46,17 @@
                                 <td><small><a href="" (click)="verDetallesRetiro(retiro)" data-toggle="modal" data-target="#datosRetiroModal">{{retiro._id}}</a></small></td>
                                 <td><small>{{retiro.modelo.documento}} - {{retiro.modelo.nombres}} {{retiro.modelo.apellidos}}</small></td>
                                 <td class="text-center">
-                                    <span *ngIf="retiro.estado === 'GENERADO'" class="label label-warning">{{retiro.estado}}</span>
+                                    <span *ngIf="retiro.estado === 'GENERADO'" class="label label-info">{{retiro.estado}}</span>
                                     <span *ngIf="retiro.estado === 'FIRMADO'" class="label label-success">{{retiro.estado}}</span>
+                                    <span *ngIf="retiro.estado === 'FIRMADO SIN PDF'" class="label label-warning">{{retiro.estado}}</span>
                                 </td>
                                 <td class="text-center">
-                                    <span *ngIf="!retiro.entrevista" class="label label-warning">NO</span>
-                                    <span *ngIf="retiro.entrevista" class="label label-success">SI</span>
+                                    <span *ngIf="!retiro.estadoCargoPDF" class="label label-danger">NO</span>
+                                    <span *ngIf="retiro.estadoCargoPDF" class="label label-success">SI</span>
                                 </td>
                                 <td class="text-center"><small>{{retiro.fechaRenuncia | date}}</small></td>
                                 <td class="text-center"><small>{{retiro.usuarioCreacion.nombre}}</small></td>
+                                <td class="text-center"><small>{{retiro.fechaRegistro | date}}</small></td>
                                 <td class="text-nowrap text-center">
                                     <a [routerLink]="['/dashboard/actualizaRetiro', retiro._id]" class="cursor" title="Actualizar Transacción" data-toggle="tooltip" data-original-title="Actualizar Transacción del sistema">
                                         <i class="fa fa-pencil text-inverse m-r-10"></i>
@@ -69,12 +72,12 @@
                 </div>
 
                 <div class="text-center" *ngIf="mostrarBotones">
-                    <button (click)="cambiarPagina(-10)" class="btn btn-secondary">
+                    <button (click)="cambiarPagina(-25)" class="btn btn-secondary">
                         <i class="fa fa-backward"></i>&nbsp;
                         Anteriores
                     </button> &nbsp; &nbsp; &nbsp;
 
-                    <button (click)="cambiarPagina(10)" class="btn btn-secondary">
+                    <button (click)="cambiarPagina(25)" class="btn btn-secondary">
                         Siguientes &nbsp;
                         <i class="fa fa-forward"></i>
                     </button>
@@ -97,21 +100,32 @@
                         <tr>ID de transacción:</tr>
                         <tr>Motivo de retiro:</tr>
                         <tr>Presento encuesta:</tr>
-                        <tr *ngIf="retiroDetalle.estado === 'FIRMADO' || retiroDetalle.estado === 'PAGADO'">Fecha de firma:</tr>
+                        <tr>Presento entrevista:</tr>
+                        <tr *ngIf="retiroDetalle.estado === 'FIRMADO'">Fecha de firma:</tr>
+                        <tr *ngIf="retiroDetalle.estadoCargoPDF">Usuario que cargo PDF:</tr>
+                        <tr *ngIf="retiroDetalle.estadoCargoPDF">Fecha de cargue PDF:</tr>
                     </th>
-
                     <th>
                         <tr style="color:#346420; font-size:13">{{retiroDetalle._id}}</tr>
-                        <tr style="color:#346420; font-size:13">{{retiroDetalle.motivoRetiro}}</tr>
+                        <tr style="color:cadetblue; font-size:13">{{retiroDetalle.motivoRetiro}}</tr>
                         <tr>
-                            <span *ngIf="!retiroDetalle.encuesta" class="label label-warning">NO</span>
+                            <span *ngIf="!retiroDetalle.encuesta" class="label label-danger">NO</span>
                             <span *ngIf="retiroDetalle.encuesta" class="label label-success">SI</span>
                         </tr>
-                        <tr *ngIf="retiroDetalle.estado === 'FIRMADO' || retiroDetalle.estado === 'PAGADO'" style="color:cadetblue; font-size:13">{{retiroDetalle.fechaFirma | date}}</tr>
+                        <tr>
+                            <span *ngIf="!retiroDetalle.entrevista" class="label label-danger">NO</span>
+                            <span *ngIf="retiroDetalle.entrevista" class="label label-success">SI</span>
+                        </tr>
+                        <tr *ngIf="retiroDetalle.estado === 'FIRMADO'" style="color:cadetblue; font-size:13">{{retiroDetalle.fechaFirma | date}}</tr>
+                        <tr *ngIf="retiroDetalle.estadoCargoPDF" style="color:cadetblue; font-size:13">{{retiroDetalle.usuarioCargoPDF.nombre}}</tr>
+                        <tr *ngIf="retiroDetalle.estadoCargoPDF" style="color:cadetblue; font-size:13">{{retiroDetalle.fechaCargoPDF | date}}</tr>
                     </th>
                 </table>
 
-                <a href="localhost:3001/api/files/uploadspdf/obtenerpdf/pazysalvos/1696afb9-54e8-4800-bfe7-47481914736d">Descarga PDF</a>
+
+                <a *ngIf="retiroDetalle.estadoCargoPDF" class="cursor" style="color:blue;" title="Descargar pdf Paz y Salvo" (click)="obtenerpdfderetiro(retiroDetalle)">
+                    <u>Descargar Paz y Salvo</u>
+                </a>
 
             </div>
 
