--- a/src/app/pages/retiros/nuevo-retiro.component.html
+++ b/src/app/pages/retiros/nuevo-retiro.component.html
@@ -59,7 +59,7 @@
                             <div class="form-group">
                                 <label class="control-label label-form-decora">¿Presento entrevista de retiro?</label>
                                 <div class="switch">
-                                    <label>NO<input type="checkbox" formControlName="entrevista"><span class="lever switch-col-red"></span>SI</label>
+                                    <label>NO<input type="checkbox" formControlName="entrevista"><span class="lever switch-col-light-green"></span>SI</label>
                                 </div>
                             </div>
                         </div>
