--- a/src/app/pages/mantenimientos/usuarios/nuevo-usuario.component.html
+++ b/src/app/pages/mantenimientos/usuarios/nuevo-usuario.component.html
@@ -13,7 +13,7 @@
                                 <label class="control-label label-form-decora">Nombres y Apellidos</label>
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="ti-user"></i></div>
-                                    <input type="text" class="form-control" id="namessurnames" placeholder="Pedro Alberto Perez Cortez" autocomplete="off" formControlName="nombre" required>
+                                    <input type="text" class="form-control" id="namessurnames" autocomplete="off" formControlName="nombre" required>
                                 </div>
                             </div>
                         </div>
