--- a/src/app/pages/retiros/actualiza-retiro.component.html
+++ b/src/app/pages/retiros/actualiza-retiro.component.html
@@ -22,7 +22,7 @@
                         </div>
                     </div>
                     <button *ngIf="estadoAct != 'FIRMADO'" type="submit" class="btn btn-success waves-effect waves-light m-r-10">
-                        <i class="fa fa-save"></i>
+                        <i class="fa fa-share-square"></i>
                         Actualizar
                     </button>
                 </form>
