--- a/src/app/pages/monitoreswc/monitoreswc.component.html
+++ b/src/app/pages/monitoreswc/monitoreswc.component.html
@@ -44,11 +44,11 @@
                                 <th>Documento</th>
                                 <th>Nombres y Apellidos</th>
                                 <th>Correo Electrónico</th>
-                                <th>Celular</th>
-                                <th>Banco</th>
+                                <th>Tel. Celular</th>
+                                <th>Entidad Bancaria</th>
                                 <th># Cuenta</th>
-                                <th>Estado</th>
-                                <th class="w100 text-nowrap"></th>
+                                <th class="text-center">Estado</th>
+                                <th class="text-center">Acción</th>
                             </tr>
                         </thead>
                         <tbody>
