--- a/src/app/pages/mantenimientos/usuarios/actualizar-usuario.component.html
+++ b/src/app/pages/mantenimientos/usuarios/actualizar-usuario.component.html
@@ -2,7 +2,7 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header bg-info">
-                <h4 class="m-b-0 text-white">Información Personal de Modelo</h4>
+                <h4 class="m-b-0 text-white">Información de datos del usuario</h4>
             </div>
             <div class="card-body">
                 <form ngNativeValidate #f="ngForm" (ngSubmit)="actualizarDatosModeloWC(f)" class="form p-t-20">
@@ -35,8 +35,9 @@
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="ti-layout-menu-v"></i></div>
                                     <select [(ngModel)]="usuarioActualizar.role" id="role" name="role" class="form-control custom-select" required>
-                                        <option value="USER_ROLE">USER_ROLE</option>
-                                        <option value="ADMIN_ROLE">ADMIN_ROLE</option>
+                                        <option value="USER_ROLE">USUARIO DE APP</option>
+                                        <option value="ADMIN_ROLE">ADMINISTRADOR</option>
+                                        <option *ngIf="usuarioLogged.role === 'GOD_ROLE'" value="GOD_ROLE">MODO DIOS</option>
                                     </select>
                                 </div>
                             </div>
